[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/ToBlueprints/CivilHousing.png" type="Texture" id=1]
[ext_resource path="res://Scripts/people/buyWorker.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 130, 106.5 )

[node name="Area2D" type="Area2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 300.019 ]
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, 21.5 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
